Fleshed out TRS struct and made some notes on VEW.

--- a/woxl_tool/woxl_tool.vcxproj
+++ b/woxl_tool/woxl_tool.vcxproj
@@ -110,6 +110,7 @@
     <ClCompile Include="TRF.cpp" />
     <ClCompile Include="TRS.cpp" />
     <ClCompile Include="TRV.cpp" />
+    <ClCompile Include="VEW.cpp" />
     <ClCompile Include="vram.cpp" />
     <ClCompile Include="WAD.cpp" />
     <ClCompile Include="woxl_tool.cpp" />
