Added TRS loader.

--- a/woxl_tool/woxl_tool.vcxproj
+++ b/woxl_tool/woxl_tool.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="tim.h" />
     <ClInclude Include="TRACK.h" />
     <ClInclude Include="TRF.h" />
+    <ClInclude Include="TRS.h" />
     <ClInclude Include="TRV.h" />
     <ClInclude Include="vram.h" />
     <ClInclude Include="WAD.h" />
