--- a/woxl_tool/woxl_tool.vcxproj.filters
+++ b/woxl_tool/woxl_tool.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="TRF.h">
       <Filter>Header Files\WOXL</Filter>
     </ClInclude>
+    <ClInclude Include="TRS.h">
+      <Filter>Header Files\WOXL</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
