--- a/woxl_tool/woxl_tool.vcxproj
+++ b/woxl_tool/woxl_tool.vcxproj
@@ -49,7 +49,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>/D_USE_MATH_DEFINES /Zp %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/D_USE_MATH_DEFINES /D_CRT_SECURE_NO_WARNINGS /Zp %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
